Document the parser generator, the compiler plugin, the signer and the two resolver strategies
Four capabilities landed in the tool and none of them was on the site.

*Generating sources* gains ANTLR as the sixth generator: the `.g4` grammars an
`antlr.properties` compiles, the `package` key doing double duty as the declared
package and the directory the sources land in, and the `.tokens` and `.interp`
files the step drops so only sources reach the jar.

*Code quality & testing* gains a section for analysis that runs inside the
compiler rather than beside it. Error Prone is declared like any compiler plugin,
with `@jenesis.plugin javac <coordinate>`, while an `errorprone.properties`
turns it on and carries its flags - and each half fails loudly without the other.
The chapter says why `javac` forks while it is active.

*Publishing* gains the signature that lives inside the archive, beside the
detached one it already covered. The `jenesis.jarsigner.*` keys are properties
rather than a configuration file because the key differs per machine, so the
chapter shows the three layers a value can come from, and says that naming any
of them commits the build to signing: a missing key store then stops the build
rather than shipping unsigned. A password is a location, never a value.

*Dependencies* gains `fail` and `managed` on both resolvers, and `stable`, which
the strategy table had been missing.

Three things were corrected on the way. Every reference table now carries the
keys its chapter describes. The configuration-folder list named no generator
file at all, and now names all six. And 102 demo links pointed at numbers from
earlier renumberings - `demo-46-supply-chain-security` has not existed since that
demo was split in three - so every link is rebuilt from the demo folder as it
stands, and the three new demos join the demos page.

`npm run check` passes: 185 internal links and fragments.